# ipcserialtest

./: Cargo.toml  README.md  serial-test.sh
src/: main.rs  modbus_slave.rs
