[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="*"
serialport="*"
chrono = "0.4"
tokio-modbus = { version = "*",  features = ["tcp", "server","tcp-server-unstable"] }
# tokio-serial = { version = "5.4.3" }
tokio = { version = "1.18.0", features = ["full"] }
futures = { version = "0.3.21"}
lazy_static = "*"